Login, Historial Clinico

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 build/classes/META-INF/persistence.xml
 build/classes/META-INF/persistence.xml
 build/classes/META-INF/persistence.xml
+build/classes/META-INF/persistence.xml
